app/Resources/public/css/scorm.css
/* ... */
.scorm_item_normal.scorm_highlight.scorm_completed{
    background: url(../../../../main/img/icons/svg/check-highlight.svg) #00829C right center no-repeat;
}
.scorm_item_normal.scorm_completed{
    background: url(../../../../main/img/icons/svg/check-completed.svg) #F5F5F5 right center no-repeat;
}
.scorm_item_normal.scorm_not_attempted{
    background: url(../../../../main/img/icons/svg/check-not-attempted.svg) #FFFFFF right center no-repeat;
}
.sidebar-scorm{
    border-right: 1px solid #e6e6e6;
}
.scorm_item_normal.scorm_highlight a{
    color: #FFFFFF;
}
/* END LP VIEW COLLAPSE */
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    #learning_path_left_zone {
        width: 250px;
    }
    #learning_path_right_zone {
        left: 250px;
        width: calc(100% - 250px);
    }
    #learning_path_right_zone.no-right-col {
        width: 100%;
    }
    #learning_path_main.lp-view-include-breadcrumb #learning_path_left_zone,
    #learning_path_main.lp-view-include-breadcrumb #learning_path_right_zone {
        top: 0;
    }
    #learning_path_right_zone .lp-view-tabs .tab-content {
        bottom: 10px;
        right: 10px;
        top: 60px;
    }
    #learning_path_right_zone .tab-pane{
    }
    #learning_path_right_zone .tab-pane iframe {
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    #learning_path_left_zone {
        width: 300px;
    }

    #learning_path_right_zone {
        left: 300px;
        width: calc(100% - 300px);
    }
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    #learning_path_left_zone {
        width: 450px;
    }

    #learning_path_right_zone {
        left: 465px;
        width: calc(100% - 465px);
    }
}
@media (min-width : 480px) and (max-width: 767px) {
    #panel-scorm .image-avatar{
        display: none;
    }
    #scorm-info {
	padding: 0;
	margin: 0;
    }
    #learning_path_left_zone .lp-view-zone-container,
    #learning_path_right_zone .lp-view-zone-container{
        padding: 0;
    }
    #scorm-info {
	padding: 30px 0 0 0;
	margin: 0;
    }
    .nav-tabs-bar{
        display: none;
    }
}
/* Landscape phones and down */
@media (max-width: 480px) {
    .scorm-title{
        font-size: 14px;
        padding: 10px;
    }
    .movil-toolbar{
        width: 100%;
        height: auto;
    }
    .scorm_item_normal{
        padding: 10px 5px;
    }
    .actions_lp .btn-group .btn-sm{
        padding: 10px;
    }
    .icon-toolbar .fa {
	width: 35px;
	height: 35px;
	line-height: 35px;
	font-size: 22px;
    }
    .btn-movil {
	width: 130px;
	margin: auto;
    }
    #scorm-info {
	padding: 30px 0 0 0;
	margin: 0;
    }
    #learning_path_right_zone {
        left: 100%;
        width: auto;
    }
    #panel-scorm .image-avatar{
        display: none;
    }
    .navegation-bar {
	display: block;
	padding: 2px;
	position: fixed;
	top: 0;
	right: 15px;
	z-index: 999;
    }
    .nav-tabs-bar{
        display: none;
    }
    #learning_path_left_zone .lp-view-zone-container,
    #learning_path_right_zone .lp-view-zone-container{
        padding: 0;
    }
}

